Added CSS files and favicon

--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 
 <head>
   <meta charset="utf-8">
-  <title> 💜 Tom's personal site </title>
+  <title>Tom's personal site </title>
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="icon" href="fav.ico">
 </head>
 
 <body>
@@ -102,9 +104,9 @@
 
 
   <hr>
-  <h3><a href="contact_info.html">Contact Info: </a></h3>
+  <h3><a href="contact_info.html">Contact me: </a></h3>
 
-  
+
 </body>
 
 </html>
